--- a/my_github_repos/src/components/projects.css
+++ b/my_github_repos/src/components/projects.css
@@ -1,9 +1,3 @@
-/* .imagesizer{
-    height: 200px;
-    width: 200px;
+.tagHeight{
+    height : 50px;
 }
-
-.imagesizer_outer{
-    max-width: 100%;
-    max-height: 100%;
-} */
