--- a/src/components/projects/ProjectComponents/projects.css
+++ b/src/components/projects/ProjectComponents/projects.css
@@ -50,6 +50,12 @@
     color: rgb(9, 105, 218);
     text-decoration-line: underline;
 }
+.myname-exception:hover {
+    color: rgb(9, 105, 218);
+    text-decoration-line: underline;
+}
+
+
 
 #alink{
     text-decoration: none;
